Updated training need keras-rl2

--- a/src/tetris-ai.ipynb
+++ b/src/tetris-ai.ipynb
@@ -46,24 +46,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/homebrew/lib/python3.9/site-packages/gym/envs/registration.py:555: UserWarning: \u001b[33mWARN: The environment TetrisA-v0 is out of date. You should consider upgrading to version `v3`.\u001b[0m\n",
-      "  logger.warn(\n",
-      "/opt/homebrew/lib/python3.9/site-packages/gym/utils/passive_env_checker.py:195: UserWarning: \u001b[33mWARN: The result returned by `env.reset()` was not a tuple of the form `(obs, info)`, where `obs` is a observation and `info` is a dictionary containing additional information. Actual type: `<class 'numpy.ndarray'>`\u001b[0m\n",
-      "  logger.warn(\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{'render.modes': ['human', 'rgb_array']}"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": [
-    "# env = TetrisEnv()\n",
-    "# obs = env.reset()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -116,20 +113,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 109,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6"
-      ]
-     },
-     "execution_count": 86,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "env = TetrisEnv()\n",
     "env = GrayScaleObservation(env, keep_dim=True)\n",
@@ -139,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +143,7 @@
        "(1, 240, 256, 4)"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,71 +290,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
-    "from tensorflow import keras\n",
+    "import keras\n",
     "from keras.models import Sequential\n",
     "from keras.layers import  Dense, Flatten\n",
     "from keras.optimizers import Adam\n",
+    "from keras import layers\n",
     "#-------------------------------\n",
     "#Second Try for Model\n",
     "# from stable_baselines3 import DQN\n",
-    "# from stable_baselines3.common.callbacks import BaseCallback"
+    "from stable_baselines3.common.callbacks import BaseCallback"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TrainAndLoggingCallback(BaseCallback):\n",
+    "\n",
+    "    def __init__(self, check_freq, save_path, verbose=1):\n",
+    "        super(TrainAndLoggingCallback, self).__init__(verbose)\n",
+    "        self.check_freq = check_freq\n",
+    "        self.save_path = save_path\n",
+    "\n",
+    "    def _init_callback(self):\n",
+    "        if self.save_path is not None:\n",
+    "            os.makedirs(self.save_path, exist_ok=True)\n",
+    "\n",
+    "    def _on_step(self):\n",
+    "        if self.n_calls % self.check_freq == 0:\n",
+    "            model_path = os.path.join(self.save_path, 'best_model_{}'.format(self.n_calls))\n",
+    "            self.model.save(model_path)\n",
+    "\n",
+    "        return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
     "def build_model(states, actions):\n",
-    "    model = Sequential()\n",
-    "    model.add(Flatten(input_shape=(1,states)))\n",
-    "    model.add(Dense(24, activation='relu'))\n",
-    "    model.add(Dense(24, activation='relu'))\n",
-    "    model.add(Dense(actions, activation='linear'))\n",
+    "    model = keras.Sequential(\n",
+    "        [\n",
+    "            keras.Input(shape=(240, 256, 4)),\n",
+    "            layers.Conv2D(32, 8, strides=4, activation=\"relu\"),\n",
+    "            layers.Conv2D(64, 4, strides=2, activation=\"relu\"),\n",
+    "            layers.Conv2D(64, 3, strides=1, activation=\"relu\"),\n",
+    "            layers.Flatten(),\n",
+    "            layers.Dense(512, activation=\"relu\"),\n",
+    "            layers.Dense(actions, activation=\"linear\"),\n",
+    "        ]\n",
+    "    )\n",
     "    return model\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CHECKPOINT_DIR = './train/'\n",
+    "LOG_DIR = './logs/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "callback = TrainAndLoggingCallback(check_freq=10000, save_path=CHECKPOINT_DIR)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
     "states = env.observation_space.shape[0]\n",
     "actions = env.action_space.n\n",
-    "model = build_model(states, actions)\n"
+    "model = build_model(states, actions)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential\"\n",
+      "Model: \"sequential_5\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " flatten (Flatten)           (None, 240)               0         \n",
+      " conv2d_6 (Conv2D)           (None, 59, 63, 32)        8224      \n",
       "                                                                 \n",
-      " dense (Dense)               (None, 24)                5784      \n",
+      " conv2d_7 (Conv2D)           (None, 28, 30, 64)        32832     \n",
       "                                                                 \n",
-      " dense_1 (Dense)             (None, 24)                600       \n",
+      " conv2d_8 (Conv2D)           (None, 26, 28, 64)        36928     \n",
       "                                                                 \n",
-      " dense_2 (Dense)             (None, 6)                 150       \n",
+      " flatten_5 (Flatten)         (None, 46592)             0         \n",
+      "                                                                 \n",
+      " dense_13 (Dense)            (None, 512)               23855616  \n",
+      "                                                                 \n",
+      " dense_14 (Dense)            (None, 6)                 3078      \n",
       "                                                                 \n",
       "=================================================================\n",
-      "Total params: 6,534\n",
-      "Trainable params: 6,534\n",
+      "Total params: 23,936,678\n",
+      "Trainable params: 23,936,678\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -380,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -451,17 +492,8 @@
    ],
    "source": [
     "# model = DQN(\"MlpPolicy\", env, verbose=1, learning_rate=0.000001)\n",
-    "# model.learn(total_timesteps=10000, log_interval=4)\n",
+    "model.learn(total_timesteps=1000000, callback=callback)\n",
     "# model.save(\"dqn_cartpole\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# model = .load('')"
    ]
   },
   {
